# Youtube_Playlist_Downloader

./: .gitignore  Cargo.toml  README.md  example_ids.txt  string_checking.txt
src/: downloader.rs  library.rs  local.rs  main.rs
src/downloader/: name.rs  scraping.rs
