[package]
name = "Youtube_Playlist_Downloader"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.23", features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.27"
opusmeta = "1.1.0"
reqwest = {version="0.12.8", default-features = false, features=["default-tls"]}
serde_json = {version="1.0.128", default-features = false, features=["std"]}
tokio = {version="1.40.0", default-features = false, features=["macros", "rt-multi-thread"]}
url = {version="2.5.4", default-features = false, features=["std"]}
